Removing 'overflow:auto' from container causing scrolling issue

--- a/.tmp/styles/main.css
+++ b/.tmp/styles/main.css
@@ -29,7 +29,7 @@
   .comparison-container {
     padding-left: 40px;
     padding-right: 40px;
-    overflow: auto;
+    /*overflow: auto;*/
     position: relative;
   }
 
@@ -45,7 +45,7 @@
     font-size: 1.25em;
     position: absolute;
     width: calc(100% - 80px);
-    top: 100px;
+    top: 84px;
   }
 
   .comparison-product-box {
