--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -22,7 +22,7 @@
 	.comparison-container {
 		padding-left: 40px;
 		padding-right: 40px;
-		overflow: auto;
+		/*overflow: auto;*/
 		position: relative;
 	}
 	.comparison-container h1{
@@ -36,7 +36,7 @@
 		font-size: 1.25em;
 		position: absolute;
 		width: calc(100% - 80px);
-		top: 100px;
+		top: 84px;
 	}
 	.comparison-product-box {
 		float: left;
